--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ background-color:rgb(42, 45, 46);
     display: flex;
     width: 75%;
     margin: auto;
-    background-image: url(css/13.jpg);
+    background-image: url(backround/13.jpg);
     background-repeat: no-repeat;
     background-size:100%;
 }
